--- a/1.index.html
+++ b/1.index.html
@@ -4,139 +4,171 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Festicloze</title>
+    <title>Festicloze - Festival Baroque de Noël</title>
     <link rel="stylesheet" type="text/css" href="src/css/style.css" />
     <script src="src/js/script.js" defer></script>
 </head>
 
 <body>
-    <header class="header">
 
+    <header class="header">
         <button class="header__menu-button" aria-label="Ouvrir le menu" aria-expanded="false" aria-controls="mainNav">
-            <span class="menu-button__bar" aria-hidden="true"></span>
-            <span class="menu-button__bar" aria-hidden="true"></span>
-            <span class="menu-button__bar" aria-hidden="true"></span>
+            <span class="header__menu-bar" aria-hidden="true"></span>
+            <span class="header__menu-bar" aria-hidden="true"></span>
+            <span class="header__menu-bar" aria-hidden="true"></span>
         </button>
 
-        <nav class="header__menu menu" id="mainNav" hidden>
-            <ul class="menu__list">
-                <li class="menu__item">
-                    <a class="menu__link" href="/">Accueil</a>
+        <nav class="header__nav nav" id="mainNav" hidden>
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a class="nav__link" href="/">ACCUEIL</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/2.présentation.html">PRÉSENTAION</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="/2.présentation.html">PRÉSENTATION</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/3.programmation.html">PROGRAMMATION</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="/3.programmation.html">PROGRAMMATION</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/4.listedesgroupes.html">LISTE DES GROUPES</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="/4.listedesgroupes.html">LISTE DES GROUPES</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/7.lascene.html">LA SCENE</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="/7.lascene.html">LA SCÈNE</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/8.infospratiques.html">INFOS PRATIQUES</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="/8.infospratiques.html">INFOS PRATIQUES</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/9.contact.html">CONTACT</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="/9.contact.html">CONTACT</a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <div>
-            <h1>FESTICLOZE</h1>
-            <p>DU 20 AU 23 DÉCEMBRE 2025</p>
-            <a href="/8.infospratiques.html" class="button">RÉSERVATION</a>
-        </div>
+    <main class="main-content">
 
-        <section>
-            <div>
-                <artiste 1>
-                    <a href="/5.artiste1.html">
-                        <h3>J1 - VENDREDI 20/12</h3>
-                        <img src="/assets/images/artiste 1.webp" />
-                        <h4>IL GIARDINO ARMONICO</h4>
-                        <p>Aux origines de l’opéra...
+        <section class="hero">
+            <h1 class="hero__title">FESTICLOZE</h1>
+            <p class="hero__date">DU 20 AU 23 DÉCEMBRE 2025</p>
+            <a href="/8.infospratiques.html" class="hero__cta button">RÉSERVATION</a>
+        </section>
+
+        <section class="programmation">
+            <h2 class="programmation__title visually-hidden">Programmation par jour</h2>
+
+            <div class="programmation__grid">
+
+                <article class="card">
+                    <a href="/5.artiste1.html" class="card__link">
+                        <h3 class="card__day">J1 - VENDREDI 20/12</h3>
+                        <img src="/assets/images/artiste 1.webp" alt="L'ensemble Il Giardino Armonico en concert"
+                            class="card__image" />
+                        <h4 class="card__artist-name">IL GIARDINO ARMONICO</h4>
+                        <p class="card__description">
+                            <strong>Aux origines de l’opéra...</strong><br>
                             Soirée d’ouverture consacrée à la naissance de l’opéra baroque : récitatifs expressifs,
-                            continuo, instruments anciens et l’univers poétique du mythe d’Orphée.</p>
+                            continuo, instruments anciens et l’univers poétique du mythe d’Orphée.
+                        </p>
                     </a>
-                </artiste 1>
+                </article>
 
-                <artiste 2>
-                    <a href="/6.artiste2.html">
-                        <h3>J2 - SAMEDI 21/12</h3>
-                        <img src="/assets/images/artiste 2.webp" />
-                        <h4>LES ARTS FLORISSANTS</h4>
-                        <p>Sous le règne du Roi-Soleil...
+                <article class="card">
+                    <a href="/6.artiste2.html" class="card__link">
+                        <h3 class="card__day">J2 - SAMEDI 21/12</h3>
+                        <img src="/assets/images/artiste 2.webp" alt="Les Arts Florissants sur scène"
+                            class="card__image" />
+                        <h4 class="card__artist-name">LES ARTS FLORISSANTS</h4>
+                        <p class="card__description">
+                            <strong>Sous le règne du Roi-Soleil...</strong><br>
                             Une soirée Versailles : faste, danse, tragédie lyrique, puissance du chœur et esthétique
-                            française influencée par les
-                            ballets de cour de Louis XIV.</p>
+                            française influencée par les ballets de cour de Louis XIV.
+                        </p>
                     </a>
-                </artiste 2>
+                </article>
 
-                <artiste 3>
-                    <h3>J3 - DIMANCHE 22/12</h3>
-                    <img src="/assets/images/artiste 3.webp" />
-                    <h4>LES TALENTS LYRIQUES</h4>
-                    <p>Passions et virtuosité...
-                        Sommet de l’opéra seria italien : airs da capo, virtuosité vocale, rôle de contreténor, drame
-                        politique et passion
-                        amoureuse.</p>
+                <article class="card">
+                    <a href="/artiste3.html" class="card__link">
+                        <h3 class="card__day">J3 - DIMANCHE 22/12</h3>
+                        <img src="/assets/images/artiste 3.webp" alt="Christophe Rousset dirigeant Les Talens Lyriques"
+                            class="card__image" />
+                        <h4 class="card__artist-name">LES TALENS LYRIQUES</h4>
+                        <p class="card__description">
+                            <strong>Passions et virtuosité...</strong><br>
+                            Sommet de l’opéra seria italien : airs da capo, virtuosité vocale, rôle de contreténor,
+                            drame politique et passion amoureuse.
+                        </p>
                     </a>
-                </artiste 3>
+                </article>
 
-                <artiste 4>
-                    <h3>J4 - LUNDI 23/12</h3>
-                    <img src="/assets/images/artiste 4.webp" />
-                    <h4>IL SEMINARIO MUSICALE</h4>
-                    <p>La fête baroque de Noël...
-                        Une soirée festive et lumineuse, mêlant éclat du spectacle baroque français tardif et musique
-                        sacrée de Noël.</p>
+                <article class="card">
+                    <a href="/artiste4.html" class="card__link">
+                        <h3 class="card__day">J4 - LUNDI 23/12</h3>
+                        <img src="/assets/images/artiste 4.webp" alt="L'ensemble Il Seminario Musicale"
+                            class="card__image" />
+                        <h4 class="card__artist-name">IL SEMINARIO MUSICALE</h4>
+                        <p class="card__description">
+                            <strong>La fête baroque de Noël...</strong><br>
+                            Une soirée festive et lumineuse, mêlant éclat du spectacle baroque français tardif et
+                            musique sacrée de Noël.
+                        </p>
                     </a>
-                </artiste 4>
+                </article>
+
+            </div>
         </section>
 
-        <section>
-            <h4>Infos pratiques:</h4>
-            <p>Le Festival Baroque de Noël vous accueille au Temple Saint-Martin de Montbéliard pour sa première édition.</p>
-                <li>- Parking gratuit à proximité...</li>
-                <li>- Espace vélo...</li>
-                <li>- Bar hivernal & douceurs locales...</li>
-                <li>- Animations et découverte du baroque...</li>
-                <li>- Boutique du festival...</li>
-            </p>
+        <section class="infos">
+            <h4 class="infos__title">Infos pratiques :</h4>
+            <p class="infos__intro">Le Festival Baroque de Noël vous accueille au Temple Saint-Martin de Montbéliard
+                pour sa première édition.</p>
+            <ul class="infos__list list">
+                <li class="list__item">Parking gratuit à proximité</li>
+                <li class="list__item">Espace vélo</li>
+                <li class="list__item">Bar hivernal & douceurs locales</li>
+                <li class="list__item">Animations et découverte du baroque</li>
+                <li class="list__item">Boutique du festival</li>
+            </ul>
         </section>
 
-        <section>
-            <h4>Nos partenaires:</h4>
-            <p>
-                <li>- Pays de Montbéliard Agglomération</li>
-                <li>- Ville de Montbéliard</li>
-                <li>- Temple Saint-Martin</li>
-                <li>- Office de Tourisme du Pays de Montbéliard</li>
-                <li>- ADeC</li>
-            </p>
+        <section class="partners">
+            <h4 class="partners__title">Nos partenaires :</h4>
+            <ul class="partners__list list">
+                <li class="list__item">Pays de Montbéliard Agglomération</li>
+                <li class="list__item">Ville de Montbéliard</li>
+                <li class="list__item">Temple Saint-Martin</li>
+                <li class="list__item">Office de Tourisme du Pays de Montbéliard</li>
+                <li class="list__item">ADeC</li>
+            </ul>
         </section>
 
-        <footer>
-            <h2>FESTICLOZE</h2>
+    </main>
 
-            <section>
-                <h3>Menu:</h3>
-                <a href="/2.présentation.html">Le festival</a> <br>
-                <a href="/3.programmation.html">La programmation</a> <br>
-                <a href="/8.infospratiques.html">Infos pratiques</a>
+    <footer class="footer">
+        <h2 class="footer__logo">FESTICLOZE</h2>
+
+        <div class="footer__content">
+            <section class="footer__section">
+                <h3 class="footer__subtitle">Menu</h3>
+                <nav class="footer__nav">
+                    <ul class="footer__list">
+                        <li><a href="/2.présentation.html" class="footer__link">Le festival</a></li>
+                        <li><a href="/3.programmation.html" class="footer__link">La programmation</a></li>
+                        <li><a href="/8.infospratiques.html" class="footer__link">Infos pratiques</a></li>
+                    </ul>
+                </nav>
             </section>
 
-            <section>
-                <h3>Contact</h3>
-                <p>
-                    festicloze@gmail.com <br>
-                    07 69 19 89 76 <br>
-                    Temple Saint-Martin de Montbéliard 25200 <br>
-                </p>
+            <section class="footer__section">
+                <h3 class="footer__subtitle">Contact</h3>
+                <address class="footer__address">
+                    <a href="mailto:festicloze@gmail.com" class="footer__link">festicloze@gmail.com</a><br>
+                    <a href="tel:+33769198976" class="footer__link">07 69 19 89 76</a><br>
+                    <span>Temple Saint-Martin de Montbéliard 25200</span>
+                </address>
             </section>
-        </footer>
+        </div>
+    </footer>
+
+</body>
+
+</html>
