--- a/4.listedesgroupes.html
+++ b/4.listedesgroupes.html
@@ -4,86 +4,119 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Festicloze</title>
+    <title>Liste des groupes - Festicloze</title>
     <link rel="stylesheet" type="text/css" href="src/css/style.css" />
     <script src="src/js/script.js" defer></script>
 </head>
 
 <body>
-    <header class="header">
 
+    <header class="header">
         <button class="header__menu-button" aria-label="Ouvrir le menu" aria-expanded="false" aria-controls="mainNav">
-            <span class="menu-button__bar" aria-hidden="true"></span>
-            <span class="menu-button__bar" aria-hidden="true"></span>
-            <span class="menu-button__bar" aria-hidden="true"></span>
+            <span class="header__menu-bar" aria-hidden="true"></span>
+            <span class="header__menu-bar" aria-hidden="true"></span>
+            <span class="header__menu-bar" aria-hidden="true"></span>
         </button>
 
-        <nav class="header__menu menu" id="mainNav" hidden>
-            <ul class="menu__list">
-                <li class="menu__item">
-                    <a class="menu__link" href="/1.index.html">Accueil</a>
+        <nav class="header__nav nav" id="mainNav" hidden>
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a class="nav__link" href="/1.index.html">ACCUEIL</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/2.présentation.html">PRÉSENTAION</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="/2.présentation.html">PRÉSENTATION</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/3.programmation.html">PROGRAMMATION</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="/3.programmation.html">PROGRAMMATION</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/">LISTE DES GROUPES</a>
+                <li class="nav__item">
+                    <a class="nav__link nav__link--active" href="/" aria-current="page">LISTE DES GROUPES</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/7.lascene.html">LA SCENE</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="/7.lascene.html">LA SCÈNE</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/8.infospratiques.html">INFOS PRATIQUES</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="/8.infospratiques.html">INFOS PRATIQUES</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/9.contact.html">CONTACT</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="/9.contact.html">CONTACT</a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <secion>
-            <div>
-                <img src="/assets/images/scene.webp" />
-                <h1>Liste des groupe:</h1>
-                <h2>Jour 1</h2>
-                <p>
-                <li>IL GIARDINO ARMONICO 20/12</li>
-                <img src="/assets/icones/violon.webp" />
+    <main class="main-content">
 
-                <li>LES ARTS FLORISSANTS 21/12</li>
-                <img src="/assets/icones/musique.webp" />
-
-                <li>LES TALENTS LYRIQUES 22/12</li>
-                <img src="/assets/icones/piano.webp" />
-
-                <li>IL SEMINARIO MUSICALE 23/12</li>
-                <img src="/assets/icones/trompette.webp" />
-                </p>
+        <section class="section section--intro">
+            <div class="section__header">
+                <img src="/assets/images/scene.webp" alt="La scène du festival éclairée"
+                    class="section__image section__image--banner" />
+                <h1 class="section__main-title">Liste des groupes</h1>
             </div>
-        </secion>
+        </section>
 
-<footer>
-    <h2>FESTICLOZE</h2>
+        <section class="groups">
+            <ul class="groups__list">
 
-    <section>
-        <h3>Menu:</h3>
-        <a href="/2.présentation.html">Le festival</a> <br>
-        <a href="/3.programmation.html">La programmation</a> <br>
-        <a href="/8.infospratiques.html">Infos pratiques</a> <br>
-    </section>
+                <li class="groups__item">
+                    <span class="groups__info">
+                        <strong>IL GIARDINO ARMONICO</strong> - 20/12
+                    </span>
+                    <img src="/assets/icones/violon.webp" alt="Icône violon" class="groups__icon" />
+                </li>
 
-    <section>
-        <h3>Contact</h3>
-        <p>
-            festicloze@gmail.com <br>
-            07 69 19 89 76 <br>
-            Temple Saint-Martin de Montbéliard 25200 <br>
-        </p>
-    </section>
-</footer>
+                <li class="groups__item">
+                    <span class="groups__info">
+                        <strong>LES ARTS FLORISSANTS</strong> - 21/12
+                    </span>
+                    <img src="/assets/icones/musique.webp" alt="Icône note de musique" class="groups__icon" />
+                </li>
 
+                <li class="groups__item">
+                    <span class="groups__info">
+                        <strong>LES TALENS LYRIQUES</strong> - 22/12
+                    </span>
+                    <img src="/assets/icones/piano.webp" alt="Icône piano" class="groups__icon" />
+                </li>
+
+                <li class="groups__item">
+                    <span class="groups__info">
+                        <strong>IL SEMINARIO MUSICALE</strong> - 23/12
+                    </span>
+                    <img src="/assets/icones/trompette.webp" alt="Icône trompette" class="groups__icon" />
+                </li>
+
+            </ul>
+        </section>
+
+    </main>
+
+    <footer class="footer">
+        <h2 class="footer__logo">FESTICLOZE</h2>
+
+        <div class="footer__content">
+            <section class="footer__section">
+                <h3 class="footer__subtitle">Menu</h3>
+                <nav class="footer__nav">
+                    <ul class="footer__list">
+                        <li><a href="/2.présentation.html" class="footer__link">Le festival</a></li>
+                        <li><a href="/3.programmation.html" class="footer__link">La programmation</a></li>
+                        <li><a href="/8.infospratiques.html" class="footer__link">Infos pratiques</a></li>
+                    </ul>
+                </nav>
+            </section>
+
+            <section class="footer__section">
+                <h3 class="footer__subtitle">Contact</h3>
+                <address class="footer__address">
+                    <a href="mailto:festicloze@gmail.com" class="footer__link">festicloze@gmail.com</a><br>
+                    <a href="tel:+33769198976" class="footer__link">07 69 19 89 76</a><br>
+                    <span>Temple Saint-Martin de Montbéliard 25200</span>
+                </address>
+            </section>
+        </div>
+    </footer>
+
+</body>
+
+</html>
