--- a/5.artiste1.html
+++ b/5.artiste1.html
@@ -4,78 +4,102 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Festicloze</title>
+    <title>Il Giardino Armonico - Festicloze</title>
     <link rel="stylesheet" type="text/css" href="src/css/style.css" />
     <script src="src/js/script.js" defer></script>
 </head>
 
 <body>
-    <header class="header">
 
+    <header class="header">
         <button class="header__menu-button" aria-label="Ouvrir le menu" aria-expanded="false" aria-controls="mainNav">
-            <span class="menu-button__bar" aria-hidden="true"></span>
-            <span class="menu-button__bar" aria-hidden="true"></span>
-            <span class="menu-button__bar" aria-hidden="true"></span>
+            <span class="header__menu-bar" aria-hidden="true"></span>
+            <span class="header__menu-bar" aria-hidden="true"></span>
+            <span class="header__menu-bar" aria-hidden="true"></span>
         </button>
 
-        <nav class="header__menu menu" id="mainNav" hidden>
-            <ul class="menu__list">
-                <li class="menu__item">
-                    <a class="menu__link" href="/">Accueil</a>
+        <nav class="header__nav nav" id="mainNav" hidden>
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a class="nav__link" href="/1.index.html">ACCUEIL</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/2.présentation.html">PRÉSENTAION</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="/2.présentation.html">PRÉSENTATION</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/3.programmation.html">PROGRAMMATION</a>
+                <li class="nav__item">
+                    <a class="nav__link nav__link--active" href="/3.programmation.html">PROGRAMMATION</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/4.listedesgroupes.html">LISTE DES GROUPES</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="/4.listedesgroupes.html">LISTE DES GROUPES</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/7.lascene.html">LA SCENE</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="/7.lascene.html">LA SCÈNE</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/8.infospratiques.html">INFOS PRATIQUES</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="/8.infospratiques.html">INFOS PRATIQUES</a>
                 </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/9.contact.html">CONTACT</a>
+                <li class="nav__item">
+                    <a class="nav__link" href="/9.contact.html">CONTACT</a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <secion>
-            <div>
-                <h1>Artistes:</h1>
-                <h2>ILGIARDINO ARMONICO</h2>
-                <h3>Représentation le 20/12</h3>
-                <img src="/assets/images/IL_GIARDINO_ARMONICO.webp" />
-                <h2>Description:</h2>
-                <p>Fondé en Italie, Il Giardino Armonico est un ensemble spécialisé dans l’interprétation historiquement informée du
-                répertoire baroque et classique.
-                </p>
+    <main class="main-content">
+
+        <section class="artist">
+            <header class="artist__header">
+                <span class="artist__label">Artistes</span>
+                <h1 class="artist__name">IL GIARDINO ARMONICO</h1>
+                <p class="artist__date">Représentation le 20/12</p>
+            </header>
+
+            <div class="artist__content">
+                <img src="/assets/images/IL_GIARDINO_ARMONICO.webp" alt="L'ensemble Il Giardino Armonico"
+                    class="artist__image" />
+
+                <article class="artist__description">
+                    <h2 class="artist__subtitle">Description :</h2>
+                    <p class="artist__text">
+                        Fondé en Italie, Il Giardino Armonico est un ensemble spécialisé dans l’interprétation
+                        historiquement informée du répertoire baroque et classique.
+                    </p>
+                </article>
             </div>
-        </secion>
 
-<footer>
-    <h2>FESTICLOZE</h2>
+            <div class="artist__actions">
+                <a href="/3.programmation.html" class="button button--secondary">Retour au programme</a>
+            </div>
+        </section>
 
-    <section>
-        <h3>Menu:</h3>
-        <a href="/2.présentation.html">Le festival</a> <br>
-        <a href="/3.programmation.html">La programmation</a> <br>
-        <a href="/8.infospratiques.html">Infos pratiques</a> <br>
-    </section>
+    </main>
 
-    <section>
-        <h3>Contact</h3>
-        <p>
-            festicloze@gmail.com <br>
-            07 69 19 89 76 <br>
-            Temple Saint-Martin de Montbéliard 25200 <br>
-        </p>
-    </section>
-</footer>
+    <footer class="footer">
+        <h2 class="footer__logo">FESTICLOZE</h2>
 
+        <div class="footer__content">
+            <section class="footer__section">
+                <h3 class="footer__subtitle">Menu</h3>
+                <nav class="footer__nav">
+                    <ul class="footer__list">
+                        <li><a href="/2.présentation.html" class="footer__link">Le festival</a></li>
+                        <li><a href="/3.programmation.html" class="footer__link">La programmation</a></li>
+                        <li><a href="/8.infospratiques.html" class="footer__link">Infos pratiques</a></li>
+                    </ul>
+                </nav>
+            </section>
+
+            <section class="footer__section">
+                <h3 class="footer__subtitle">Contact</h3>
+                <address class="footer__address">
+                    <a href="mailto:festicloze@gmail.com" class="footer__link">festicloze@gmail.com</a><br>
+                    <a href="tel:+33769198976" class="footer__link">07 69 19 89 76</a><br>
+                    <span>Temple Saint-Martin de Montbéliard 25200</span>
+                </address>
+            </section>
+        </div>
+    </footer>
+
+</body>
+
+</html>
