infos pratiques changements

--- a/7.lascene.html
+++ b/7.lascene.html
@@ -64,13 +64,13 @@
 
             <div class="venue__gallery">
                 <figure class="venue__figure">
-                    <img src="/assets/images/temple_exterieur.webp" alt="Façade extérieure du Temple Saint-Martin"
+                    <img src="/assets/images/temple_saint-martinextérieur 1.webp" alt="Façade extérieure du Temple Saint-Martin"
                         class="venue__image" />
                     <figcaption class="venue__caption">Vue extérieure</figcaption>
                 </figure>
 
                 <figure class="venue__figure">
-                    <img src="/assets/images/temple_interieur.webp"
+                    <img src="/assets/images/temple_saint_martin_intérieur1.webp"
                         alt="Intérieur du Temple avec ses gradins et l'orgue" class="venue__image" />
                     <figcaption class="venue__caption">Vue intérieure</figcaption>
                 </figure>
