police head index

--- a/1.index.html
+++ b/1.index.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Festicloze - Festival Baroque de Noël</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lateef:wght@200;300;400;500;600;700;800&family=League+Spartan:wght@100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="src/css/style.css" />
     <script src="src/js/script.js" defer></script>
 </head>
@@ -91,7 +97,7 @@
                         <h3 class="card__day">J3 - DIMANCHE 22/12</h3>
                         <img src="/assets/images/artiste 3.webp" alt="Christophe Rousset dirigeant Les Talens Lyriques"
                             class="card__image" />
-                        <h4 class="card__artist-name">LES TALENS LYRIQUES</h4>
+                        <h4 class="card__artist-name">LES TALENTS LYRIQUES</h4>
                         <p class="card__description">
                             <strong>Passions et virtuosité...</strong><br>
                             Sommet de l’opéra seria italien : airs da capo, virtuosité vocale, rôle de contreténor,
