réalisation homepage sans footer

--- a/1.index.html
+++ b/1.index.html
@@ -128,22 +128,22 @@
             <p class="infos__intro">Le Festival Baroque de Noël vous accueille au Temple Saint-Martin de Montbéliard
                 pour sa première édition.</p>
             <ul class="infos__list list">
-                <li class="list__item">Parking gratuit à proximité</li>
-                <li class="list__item">Espace vélo</li>
-                <li class="list__item">Bar hivernal & douceurs locales</li>
-                <li class="list__item">Animations et découverte du baroque</li>
-                <li class="list__item">Boutique du festival</li>
+                <li class="list__item">- Parking gratuit à proximité</li>
+                <li class="list__item">- Espace vélo</li>
+                <li class="list__item">- Bar hivernal & douceurs locales</li>
+                <li class="list__item">- Animations et découverte du baroque</li>
+                <li class="list__item">- Boutique du festival</li>
             </ul>
         </section>
 
         <section class="partners">
             <h4 class="partners__title">Nos partenaires :</h4>
             <ul class="partners__list list">
-                <li class="list__item">Pays de Montbéliard Agglomération</li>
-                <li class="list__item">Ville de Montbéliard</li>
-                <li class="list__item">Temple Saint-Martin</li>
-                <li class="list__item">Office de Tourisme du Pays de Montbéliard</li>
-                <li class="list__item">ADeC</li>
+                <li class="list__item">- Pays de Montbéliard Agglomération</li>
+                <li class="list__item">- Ville de Montbéliard</li>
+                <li class="list__item">- Temple Saint-Martin</li>
+                <li class="list__item">- Office de Tourisme du Pays de Montbéliard</li>
+                <li class="list__item">- ADeC</li>
             </ul>
         </section>
 
