--- a/1.index.html
+++ b/1.index.html
@@ -167,9 +167,9 @@
             <section class="footer__section">
                 <h3 class="footer__subtitle">Contact</h3>
                 <address class="footer__address">
-                    <a href="mailto:festicloze@gmail.com" class="footer__link">festicloze@gmail.com</a><br>
-                    <a href="tel:+33769198976" class="footer__link">07 69 19 89 76</a><br>
-                    <span>Temple Saint-Martin de Montbéliard 25200</span>
+                    <a href="mailto:...">festicloze@gmail.com</a>
+                    <a href="tel:...">07 69 19 89 76</a>
+                    <span>Temple Saint-Martin...</span>
                 </address>
             </section>
         </div>
