--- a/1.index.html
+++ b/1.index.html
@@ -25,7 +25,11 @@
         </button>
 
         <nav class="header__nav nav" id="mainNav" hidden>
+
+            <h1 class="nav__title">MENU</h1>
+
             <ul class="nav__list">
+
                 <li class="nav__item">
                     <a class="nav__link" href="/2.présentation.html">PRÉSENTATION</a>
                 </li>
@@ -53,17 +57,16 @@
         <section class="hero">
             <h1 class="hero__title">FESTICLOZE</h1>
             <p class="hero__date">DU 20 AU 23 DÉCEMBRE 2025</p>
-            <a href="/8.infospratiques.html" class="hero__cta button">RÉSERVATION</a>
+            <a href="/8.infospratiques.html" class="hero__cta button button--hero-large">RÉSERVATION</a>
         </section>
 
-        <section class="programmation">
-            <h2 class="programmation__title visually-hidden">Programmation par jour</h2>
+        <section class="programmation section">
+            <h3 class="programmation__title visually-hidden">Programmation par jour</h3>
 
             <div class="programmation__grid">
-
                 <article class="card">
                     <a href="/5.artiste1.html" class="card__link">
-                        <h3 class="card__day">J1 - VENDREDI 20/12</h3>
+                        <h4 class="card__day">J1 - VENDREDI 20/12</h4>
                         <img src="/assets/images/artiste 1.webp" alt="L'ensemble Il Giardino Armonico en concert"
                             class="card__image" />
                         <h4 class="card__artist-name">IL GIARDINO ARMONICO</h4>
@@ -77,7 +80,7 @@
 
                 <article class="card">
                     <a href="/6.artiste2.html" class="card__link">
-                        <h3 class="card__day">J2 - SAMEDI 21/12</h3>
+                        <h4 class="card__day">J2 - SAMEDI 21/12</h4>
                         <img src="/assets/images/artiste 2.webp" alt="Les Arts Florissants sur scène"
                             class="card__image" />
                         <h4 class="card__artist-name">LES ARTS FLORISSANTS</h4>
@@ -91,7 +94,7 @@
 
                 <article class="card">
                     <a href="/artiste3.html" class="card__link">
-                        <h3 class="card__day">J3 - DIMANCHE 22/12</h3>
+                        <h4 class="card__day">J3 - DIMANCHE 22/12</h4>
                         <img src="/assets/images/artiste 3.webp" alt="Christophe Rousset dirigeant Les Talens Lyriques"
                             class="card__image" />
                         <h4 class="card__artist-name">LES TALENTS LYRIQUES</h4>
@@ -105,7 +108,7 @@
 
                 <article class="card">
                     <a href="/artiste4.html" class="card__link">
-                        <h3 class="card__day">J4 - LUNDI 23/12</h3>
+                        <h4 class="card__day">J4 - LUNDI 23/12</h4>
                         <img src="/assets/images/artiste 4.webp" alt="L'ensemble Il Seminario Musicale"
                             class="card__image" />
                         <h4 class="card__artist-name">IL SEMINARIO MUSICALE</h4>
@@ -120,7 +123,7 @@
             </div>
         </section>
 
-        <section class="infos">
+        <section class="infos section">
             <h4 class="infos__title">Infos pratiques :</h4>
             <p class="infos__intro">Le Festival Baroque de Noël vous accueille au Temple Saint-Martin de Montbéliard
                 pour sa première édition.</p>
@@ -133,7 +136,7 @@
             </ul>
         </section>
 
-        <section class="partners">
+        <section class="partners section">
             <h4 class="partners__title">Nos partenaires :</h4>
             <ul class="partners__list list">
                 <li class="list__item">- Pays de Montbéliard Agglomération</li>
@@ -164,9 +167,9 @@
             <section class="footer__section">
                 <h3 class="footer__subtitle">Contact</h3>
                 <address class="footer__address">
-                    <a href="mailto:...">festicloze@gmail.com</a>
-                    <a href="tel:...">07 69 19 89 76</a>
-                    <span>Temple Saint-Martin...</span>
+                    <a href="mailto:festicloze@gmail.com" class="footer__link">festicloze@gmail.com</a>
+                    <a href="tel:0769198976" class="footer__link">07 69 19 89 76</a>
+                    <span>Temple Saint-Martin de Montbéliard 25200</span>
                 </address>
             </section>
         </div>
