--- a/4.listedesgroupes.html
+++ b/4.listedesgroupes.html
@@ -25,10 +25,11 @@
         </button>
 
         <nav class="header__nav nav" id="mainNav" hidden>
+
+            <h1 class="nav__title">MENU</h1>
+
             <ul class="nav__list">
-                <li class="nav__item">
-                    <a class="nav__link" href="/1.index.html">ACCUEIL</a>
-                </li>
+
                 <li class="nav__item">
                     <a class="nav__link" href="/2.présentation.html">PRÉSENTATION</a>
                 </li>
@@ -36,7 +37,7 @@
                     <a class="nav__link" href="/3.programmation.html">PROGRAMMATION</a>
                 </li>
                 <li class="nav__item">
-                    <a class="nav__link nav__link--active" href="/" aria-current="page">LISTE DES GROUPES</a>
+                    <a class="nav__link" href="/4.listedesgroupes.html">LISTE DES GROUPES</a>
                 </li>
                 <li class="nav__item">
                     <a class="nav__link" href="/7.lascene.html">LA SCÈNE</a>
@@ -65,31 +66,39 @@
             <ul class="groups__list">
 
                 <li class="groups__item">
-                    <span class="groups__info">
-                        <strong>IL GIARDINO ARMONICO</strong> - 20/12
-                    </span>
-                    <img src="/assets/icones/violon.webp" alt="Icône violon" class="groups__icon" />
+                    <a href="/5.artiste1.html" class="groups__link">
+                        <span class="groups__info">
+                            <strong>IL GIARDINO ARMONICO</strong> - 20/12
+                        </span>
+                        <img src="/assets/icones/violon.webp" alt="Icône violon" class="groups__icon" />
+                    </a>
                 </li>
 
                 <li class="groups__item">
-                    <span class="groups__info">
-                        <strong>LES ARTS FLORISSANTS</strong> - 21/12
-                    </span>
-                    <img src="/assets/icones/musique.webp" alt="Icône note de musique" class="groups__icon" />
+                    <a href="/6.artiste2.html" class="groups__link">
+                        <span class="groups__info">
+                            <strong>LES ARTS FLORISSANTS</strong> - 21/12
+                        </span>
+                        <img src="/assets/icones/musique.webp" alt="Icône note de musique" class="groups__icon" />
+                    </a>
                 </li>
 
                 <li class="groups__item">
-                    <span class="groups__info">
-                        <strong>LES TALENS LYRIQUES</strong> - 22/12
-                    </span>
-                    <img src="/assets/icones/piano.webp" alt="Icône piano" class="groups__icon" />
+                    <a href="/404.html" class="groups__link">
+                        <span class="groups__info">
+                            <strong>LES TALENS LYRIQUES</strong> - 22/12
+                        </span>
+                        <img src="/assets/icones/piano.webp" alt="Icône piano" class="groups__icon" />
+                    </a>
                 </li>
 
                 <li class="groups__item">
-                    <span class="groups__info">
-                        <strong>IL SEMINARIO MUSICALE</strong> - 23/12
-                    </span>
-                    <img src="/assets/icones/trompette.webp" alt="Icône trompette" class="groups__icon" />
+                    <a href="/404.html" class="groups__link">
+                        <span class="groups__info">
+                            <strong>IL SEMINARIO MUSICALE</strong> - 23/12
+                        </span>
+                        <img src="/assets/icones/trompette.webp" alt="Icône trompette" class="groups__icon" />
+                    </a>
                 </li>
 
             </ul>
@@ -115,8 +124,8 @@
             <section class="footer__section">
                 <h3 class="footer__subtitle">Contact</h3>
                 <address class="footer__address">
-                    <a href="mailto:festicloze@gmail.com" class="footer__link">festicloze@gmail.com</a><br>
-                    <a href="tel:+33769198976" class="footer__link">07 69 19 89 76</a><br>
+                    <a href="mailto:festicloze@gmail.com" class="footer__link">festicloze@gmail.com</a>
+                    <a href="tel:0769198976" class="footer__link">07 69 19 89 76</a>
                     <span>Temple Saint-Martin de Montbéliard 25200</span>
                 </address>
             </section>
