--- a/2.présentation.html
+++ b/2.présentation.html
@@ -25,16 +25,15 @@
         </button>
 
         <nav class="header__nav nav" id="mainNav" hidden>
-
-            <h1 class="nav__title">MENU</h1>
-
             <ul class="nav__list">
-
                 <li class="nav__item">
-                    <a class="nav__link" href="/2.présentation.html">PRÉSENTATION</a>
+                    <a class="nav__link" href="/1.index.html">ACCUEIL</a>
                 </li>
                 <li class="nav__item">
-                    <a class="nav__link" href="/3.programmation.html">PROGRAMMATION</a>
+                    <a class="nav__link" href="/">PRÉSENTATION</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link nav__link--active" href="/3.programmation.html" aria-current="page">PROGRAMMATION</a>
                 </li>
                 <li class="nav__item">
                     <a class="nav__link" href="/4.listedesgroupes.html">LISTE DES GROUPES</a>
