--- a/5.artiste1.html
+++ b/5.artiste1.html
@@ -68,12 +68,11 @@
                     <p class="artist__text">
                         Fondé en Italie, Il Giardino Armonico est un ensemble spécialisé dans l’interprétation
                         historiquement informée du répertoire baroque et classique.
+
+                        Il se distingue par ses concerts dynamiques et son engagement pour la restitution fidèle du style baroque italien. Leur
+                        répertoire inclut Monteverdi, Vivaldi et d’autres grands compositeurs italiens.
                     </p>
                 </article>
-            </div>
-
-            <div class="artist__actions">
-                <a href="/3.programmation.html" class="button button--secondary">Retour au programme</a>
             </div>
         </section>
 
@@ -97,8 +96,8 @@
             <section class="footer__section">
                 <h3 class="footer__subtitle">Contact</h3>
                 <address class="footer__address">
-                    <a href="mailto:festicloze@gmail.com" class="footer__link">festicloze@gmail.com</a><br>
-                    <a href="tel:+33769198976" class="footer__link">07 69 19 89 76</a><br>
+                    <a href="mailto:festicloze@gmail.com" class="footer__link">festicloze@gmail.com</a>
+                    <a href="tel:0769198976" class="footer__link">07 69 19 89 76</a>
                     <span>Temple Saint-Martin de Montbéliard 25200</span>
                 </address>
             </section>
