--- a/6.artiste2.html
+++ b/6.artiste2.html
@@ -55,7 +55,6 @@
 
         <section class="artist">
             <header class="artist__header">
-                <span class="artist__label">Artistes</span>
                 <h1 class="artist__name">LES ARTS FLORISSANTS</h1>
                 <p class="artist__date">Représentation le 21/12</p>
             </header>
@@ -76,10 +75,6 @@
                         promotion du patrimoine musical français.
                     </p>
                 </article>
-            </div>
-
-            <div class="artist__actions">
-                <a href="/3.programmation.html" class="button button--secondary">Retour au programme</a>
             </div>
         </section>
 
@@ -103,8 +98,8 @@
             <section class="footer__section">
                 <h3 class="footer__subtitle">Contact</h3>
                 <address class="footer__address">
-                    <a href="mailto:festicloze@gmail.com" class="footer__link">festicloze@gmail.com</a><br>
-                    <a href="tel:+33769198976" class="footer__link">07 69 19 89 76</a><br>
+                    <a href="mailto:festicloze@gmail.com" class="footer__link">festicloze@gmail.com</a>
+                    <a href="tel:0769198976" class="footer__link">07 69 19 89 76</a>
                     <span>Temple Saint-Martin de Montbéliard 25200</span>
                 </address>
             </section>
