--- a/8.infospratiques.html
+++ b/8.infospratiques.html
@@ -63,25 +63,25 @@
                 <article class="card-price">
                     <h3 class="card-price__title">BILLET 1 SOIRÉE</h3>
                     <p class="card-price__amount">25€</p>
-                    <a href="#" class="card-price__button button">Réservez</a>
+                    <a href="/404.html" class="card-price__button button">Réservez</a>
                 </article>
 
                 <article class="card-price">
                     <h3 class="card-price__title">BILLET 2 SOIRÉES</h3>
                     <p class="card-price__amount">45€</p>
-                    <a href="#" class="card-price__button button">Réservez</a>
+                    <a href="/404.html" class="card-price__button button">Réservez</a>
                 </article>
 
                 <article class="card-price">
                     <h3 class="card-price__title">BILLET 4 SOIRÉES</h3>
                     <p class="card-price__amount">80€</p>
-                    <a href="#" class="card-price__button button">Réservez</a>
+                    <a href="/404.html" class="card-price__button button">Réservez</a>
                 </article>
             </div>
 
             <div class="section__note">
-                <p>* Billets gratuits pour les enfants -12 ans</p>
-                <p>* Tarif réduit valable pour : étudiants, demandeurs d'emploi...</p>
+                <p>Billets gratuits pour les enfants -12 ans</p>
+                <p>Tarif réduit valable pour : étudiants, demandeurs d'emploi...</p>
                 <p>Un justificatif sera demandé à l'entrée.</p>
             </div>
         </section>
@@ -94,21 +94,21 @@
                     <h3 class="card-price__title">Hôtel de la Couronne</h3>
                     <p class="card-price__subtitle">prix / nuit</p>
                     <p class="card-price__amount">80€</p>
-                    <a href="#" class="card-price__button button button--secondary">Réservez</a>
+                    <a href="/404.html" class="card-price__button button button--secondary">Réservez</a>
                 </article>
 
                 <article class="card-price card-price--hotel">
                     <h3 class="card-price__title">Hôtel Ibis</h3>
                     <p class="card-price__subtitle">prix / nuit</p>
                     <p class="card-price__amount">110€</p>
-                    <a href="#" class="card-price__button button button--secondary">Réservez</a>
+                    <a href="/404.html" class="card-price__button button button--secondary">Réservez</a>
                 </article>
 
                 <article class="card-price card-price--hotel">
                     <h3 class="card-price__title">Hôtel Bristol</h3>
                     <p class="card-price__subtitle">prix / nuit</p>
                     <p class="card-price__amount">120€</p>
-                    <a href="#" class="card-price__button button button--secondary">Réservez</a>
+                    <a href="/404.html" class="card-price__button button button--secondary">Réservez</a>
                 </article>
             </div>
         </section>
@@ -116,10 +116,10 @@
         <section class="section section--access">
             <h2 class="section__title">Accès au Festival</h2>
             <ul class="list list--access">
-                <li class="list__item">Train (Gare Montbéliard-Ville à 10 min à pied)</li>
-                <li class="list__item">Voiture (Accès par A36 -> Sortie Montbéliard)</li>
-                <li class="list__item">Covoiturage</li>
-                <li class="list__item">Vélos (Parking vélo sécurisé sur place)</li>
+                <li class="list__item">- Train (Gare Montbéliard-Ville à 10 min à pied)</li>
+                <li class="list__item">-Voiture (Accès par A36 -> Sortie Montbéliard)</li>
+                <li class="list__item">- Covoiturage</li>
+                <li class="list__item">- Vélos (Parking vélo sécurisé sur place)</li>
             </ul>
         </section>
 
@@ -130,10 +130,6 @@
                 <li class="list__item">Les enfants sont-ils acceptés ?</li>
                 <li class="list__item">Peut-on filmer ou prendre des photos ?</li>
             </ul>
-
-            <div class="section__action">
-                <a href="/9.contact.html" class="button button--cta">POSER UNE QUESTION</a>
-            </div>
         </section>
 
     </main>
@@ -156,8 +152,8 @@
             <section class="footer__section">
                 <h3 class="footer__subtitle">Contact</h3>
                 <address class="footer__address">
-                    <a href="mailto:festicloze@gmail.com" class="footer__link">festicloze@gmail.com</a><br>
-                    <a href="tel:+33769198976" class="footer__link">07 69 19 89 76</a><br>
+                    <a href="mailto:festicloze@gmail.com" class="footer__link">festicloze@gmail.com</a>
+                    <a href="tel:0769198976" class="footer__link">07 69 19 89 76</a>
                     <span>Temple Saint-Martin de Montbéliard 25200</span>
                 </address>
             </section>
