--- a/9.contact.html
+++ b/9.contact.html
@@ -84,7 +84,7 @@
                         required></textarea>
                 </div>
 
-                <button class="button form__submit-btn" type="submit">ENVOYER</button>
+                <a href="/404.html" class="button form__submit-btn">ENVOYER</a>
             </form>
         </section>
 
@@ -140,8 +140,8 @@
             <section class="footer__section">
                 <h3 class="footer__subtitle">Contact</h3>
                 <address class="footer__address">
-                    <a href="mailto:festicloze@gmail.com" class="footer__link">festicloze@gmail.com</a><br>
-                    <a href="tel:+33769198976" class="footer__link">07 69 19 89 76</a><br>
+                    <a href="mailto:festicloze@gmail.com" class="footer__link">festicloze@gmail.com</a>
+                    <a href="tel:0769198976" class="footer__link">07 69 19 89 76</a>
                     <span>Temple Saint-Martin de Montbéliard 25200</span>
                 </address>
             </section>
