--- a/7.lascene.html
+++ b/7.lascene.html
@@ -70,8 +70,8 @@
 
             <div class="venue__gallery">
                 <figure class="venue__figure">
-                    <img src="/assets/images/temple_saint-martinextérieur 1.webp" alt="Façade extérieure du Temple Saint-Martin"
-                        class="venue__image" />
+                    <img src="/assets/images/temple_saint-martinextérieur 1.webp"
+                        alt="Façade extérieure du Temple Saint-Martin" class="venue__image" />
                     <figcaption class="venue__caption">Vue extérieure</figcaption>
                 </figure>
 
@@ -102,7 +102,8 @@
                     <div class="carousel__track artists-grid" data-carousel-track>
 
                         <article class="artist-card">
-                            <img src="/assets/images/artiste 1.webp" alt="Il Giardino Armonico" class="artist-card__image" />
+                            <img src="/assets/images/artiste 1.webp" alt="Il Giardino Armonico"
+                                class="artist-card__image" />
                             <div class="artist-card__content">
                                 <h3 class="artist-card__title">Giardino Armonico</h3>
                                 <ul class="artist-card__list">
@@ -115,12 +116,14 @@
                         </article>
 
                         <article class="artist-card">
-                            <img src="/assets/images/artiste 2.webp" alt="Les Arts Florissants" class="artist-card__image" />
+                            <img src="/assets/images/artiste 2.webp" alt="Les Arts Florissants"
+                                class="artist-card__image" />
                             <div class="artist-card__content">
                                 <h3 class="artist-card__title">Les Arts Florissants</h3>
                                 <ul class="artist-card__list">
                                     <li><strong>Ensemble :</strong> fondé par William Christie</li>
-                                    <li><strong>Spécialité :</strong> Lully, Charpentier, musique sacrée et profane française
+                                    <li><strong>Spécialité :</strong> Lully, Charpentier, musique sacrée et profane
+                                        française
                                     </li>
                                     <li><strong>Style :</strong> Raffinement, précision, élégance lyrique</li>
                                     <li><strong>En concert :</strong> Samedi 18h30</li>
@@ -129,12 +132,14 @@
                         </article>
 
                         <article class="artist-card">
-                            <img src="/assets/images/artiste 3.webp" alt="Il Seminario Musicale" class="artist-card__image" />
+                            <img src="/assets/images/artiste 3.webp" alt="Il Seminario Musicale"
+                                class="artist-card__image" />
                             <div class="artist-card__content">
                                 <h3 class="artist-card__title">Il Seminario Musicale</h3>
                                 <ul class="artist-card__list">
                                     <li><strong>Ensemble :</strong> dirigé par Gérard Lesne</li>
-                                    <li><strong>Spécialité :</strong> Monteverdi, Frescobaldi, musique vocale baroque</li>
+                                    <li><strong>Spécialité :</strong> Monteverdi, Frescobaldi, musique vocale baroque
+                                    </li>
                                     <li><strong>Style :</strong> Intime, expressif, sensibilité vocale profonde</li>
                                     <li><strong>En concert :</strong> Samedi 21h00</li>
                                 </ul>
@@ -142,7 +147,8 @@
                         </article>
 
                         <article class="artist-card">
-                            <img src="/assets/images/artiste 4.webp" alt="Les Talens Lyriques" class="artist-card__image" />
+                            <img src="/assets/images/artiste 4.webp" alt="Les Talens Lyriques"
+                                class="artist-card__image" />
                             <div class="artist-card__content">
                                 <h3 class="artist-card__title">Les Talens Lyriques</h3>
                                 <ul class="artist-card__list">
