--- a/7.lascene.html
+++ b/7.lascene.html
@@ -92,81 +92,63 @@
         </section>
 
         <section class="section section--artists">
-            <div class="carousel" data-carousel>
-                <button class="carousel__btn carousel__btn--prev" type="button" aria-label="Voir l'artiste précédent"
-                    data-carousel-prev>
-                    <span aria-hidden="true">&#10094;</span>
-                </button>
+            <div class="artists-grid">
 
-                <div class="carousel__panel">
-                    <div class="carousel__track artists-grid" data-carousel-track>
-
-                        <article class="artist-card">
-                            <img src="/assets/images/artiste 1.webp" alt="Il Giardino Armonico"
-                                class="artist-card__image" />
-                            <div class="artist-card__content">
-                                <h3 class="artist-card__title">Giardino Armonico</h3>
-                                <ul class="artist-card__list">
-                                    <li><strong>Fondé :</strong> à Milan en 1985</li>
-                                    <li><strong>Spécialité :</strong> Baroque italien, Vivaldi, Monteverdi</li>
-                                    <li><strong>Style :</strong> Virtuosité, énergie, sonorité éclatante</li>
-                                    <li><strong>En concert :</strong> Vendredi 20h00</li>
-                                </ul>
-                            </div>
-                        </article>
-
-                        <article class="artist-card">
-                            <img src="/assets/images/artiste 2.webp" alt="Les Arts Florissants"
-                                class="artist-card__image" />
-                            <div class="artist-card__content">
-                                <h3 class="artist-card__title">Les Arts Florissants</h3>
-                                <ul class="artist-card__list">
-                                    <li><strong>Ensemble :</strong> fondé par William Christie</li>
-                                    <li><strong>Spécialité :</strong> Lully, Charpentier, musique sacrée et profane
-                                        française
-                                    </li>
-                                    <li><strong>Style :</strong> Raffinement, précision, élégance lyrique</li>
-                                    <li><strong>En concert :</strong> Samedi 18h30</li>
-                                </ul>
-                            </div>
-                        </article>
-
-                        <article class="artist-card">
-                            <img src="/assets/images/artiste 3.webp" alt="Il Seminario Musicale"
-                                class="artist-card__image" />
-                            <div class="artist-card__content">
-                                <h3 class="artist-card__title">Il Seminario Musicale</h3>
-                                <ul class="artist-card__list">
-                                    <li><strong>Ensemble :</strong> dirigé par Gérard Lesne</li>
-                                    <li><strong>Spécialité :</strong> Monteverdi, Frescobaldi, musique vocale baroque
-                                    </li>
-                                    <li><strong>Style :</strong> Intime, expressif, sensibilité vocale profonde</li>
-                                    <li><strong>En concert :</strong> Samedi 21h00</li>
-                                </ul>
-                            </div>
-                        </article>
-
-                        <article class="artist-card">
-                            <img src="/assets/images/artiste 4.webp" alt="Les Talens Lyriques"
-                                class="artist-card__image" />
-                            <div class="artist-card__content">
-                                <h3 class="artist-card__title">Les Talens Lyriques</h3>
-                                <ul class="artist-card__list">
-                                    <li><strong>Dirigé par :</strong> Christophe Rousset</li>
-                                    <li><strong>Spécialité :</strong> Händel, Rameau, opéras et oratorios baroques</li>
-                                    <li><strong>Style :</strong> Puissance dramatique, finesse harmonique</li>
-                                    <li><strong>En concert :</strong> Dimanche 17h00</li>
-                                </ul>
-                            </div>
-                        </article>
-
+                <article class="artist-card">
+                    <img src="/assets/images/artiste 1.webp" alt="Il Giardino Armonico" class="artist-card__image" />
+                    <div class="artist-card__content">
+                        <h3 class="artist-card__title">Giardino Armonico</h3>
+                        <ul class="artist-card__list">
+                            <li><strong>Fondé :</strong> à Milan en 1985</li>
+                            <li><strong>Spécialité :</strong> Baroque italien, Vivaldi, Monteverdi</li>
+                            <li><strong>Style :</strong> Virtuosité, énergie, sonorité éclatante</li>
+                            <li><strong>En concert :</strong> Vendredi 20h00</li>
+                        </ul>
                     </div>
-                </div>
+                </article>
 
-                <button class="carousel__btn carousel__btn--next" type="button" aria-label="Voir l'artiste suivant"
-                    data-carousel-next>
-                    <span aria-hidden="true">&#10095;</span>
-                </button>
+                <article class="artist-card">
+                    <img src="/assets/images/artiste 2.webp" alt="Les Arts Florissants" class="artist-card__image" />
+                    <div class="artist-card__content">
+                        <h3 class="artist-card__title">Les Arts Florissants</h3>
+                        <ul class="artist-card__list">
+                            <li><strong>Ensemble :</strong> fondé par William Christie</li>
+                            <li><strong>Spécialité :</strong> Lully, Charpentier, musique sacrée et profane
+                                française
+                            </li>
+                            <li><strong>Style :</strong> Raffinement, précision, élégance lyrique</li>
+                            <li><strong>En concert :</strong> Samedi 18h30</li>
+                        </ul>
+                    </div>
+                </article>
+
+                <article class="artist-card">
+                    <img src="/assets/images/artiste 3.webp" alt="Il Seminario Musicale" class="artist-card__image" />
+                    <div class="artist-card__content">
+                        <h3 class="artist-card__title">Il Seminario Musicale</h3>
+                        <ul class="artist-card__list">
+                            <li><strong>Ensemble :</strong> dirigé par Gérard Lesne</li>
+                            <li><strong>Spécialité :</strong> Monteverdi, Frescobaldi, musique vocale baroque
+                            </li>
+                            <li><strong>Style :</strong> Intime, expressif, sensibilité vocale profonde</li>
+                            <li><strong>En concert :</strong> Samedi 21h00</li>
+                        </ul>
+                    </div>
+                </article>
+
+                <article class="artist-card">
+                    <img src="/assets/images/artiste 4.webp" alt="Les Talens Lyriques" class="artist-card__image" />
+                    <div class="artist-card__content">
+                        <h3 class="artist-card__title">Les Talens Lyriques</h3>
+                        <ul class="artist-card__list">
+                            <li><strong>Dirigé par :</strong> Christophe Rousset</li>
+                            <li><strong>Spécialité :</strong> Händel, Rameau, opéras et oratorios baroques</li>
+                            <li><strong>Style :</strong> Puissance dramatique, finesse harmonique</li>
+                            <li><strong>En concert :</strong> Dimanche 17h00</li>
+                        </ul>
+                    </div>
+                </article>
+
             </div>
         </section>
 
@@ -197,6 +179,11 @@
             </section>
         </div>
     </footer>
+    <button id="btn-retour-haut" class="bouton-haut" aria-label="Retour en haut de page">
+        <img src="/assets/icones/fleche 1.png" alt="bouton vers le haut afin de remonter la page"
+            class="bouton-haut__icone">
+    </button>
+
 
 </body>
 
