--- a/8.infospratiques.html
+++ b/8.infospratiques.html
@@ -159,6 +159,11 @@
             </section>
         </div>
     </footer>
+    <button id="btn-retour-haut" class="bouton-haut" aria-label="Retour en haut de page">
+        <img src="/assets/icones/fleche 1.png" alt="bouton vers le haut afin de remonter la page"
+            class="bouton-haut__icone">
+    </button>
+
 
 </body>
 
